# chatgpt-chat

./: .gitignore  Makefile  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  log4rs.yml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: js_handler.rs  lib.rs  main.rs
src-tauri/src/dal/: mod.rs
src-tauri/src/dal/debug_print/: init.rs
src-tauri/src/dal/mongodb/: init.rs
src-tauri/src/dal/mysql/: init.rs
src-tauri/src/dal/openai_api/: init.rs
src-tauri/src/handler/: query.rs
src-tauri/src/model/: errors.rs  interface.rs  mod.rs  msg_info.rs
src/components/: Greet.vue
src/model/: chat.ts  interface_data.ts
