[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "2.0.0-alpha.3", features = ["shell-open"] }
tauri = { version = "2.0.0-alpha.3", features = [] }
openai-api = { git = "https://github.com/booiris/openai-api.git" }
# openai-api = { path = "./lib/openai-api" }
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
once_cell = "1.17.1"
serde_with = "2.2.0"
log = "0.4.17"
log4rs = "1.2.0"
chrono = "0.4.23"
mongodb = { version = "2.4.0" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
